--- a/R/30DayChartChallenge2024/cfg/plots.yml
+++ b/R/30DayChartChallenge2024/cfg/plots.yml
@@ -20,7 +20,7 @@ default:
     day: 4
     theme: waffle
     category: Comparisons
-    source: Determine source
+    source: Portal de datos abiertos del Ayuntamiento de Madrid
   day_5:
     day: 5
     theme: diverging
