--- a/R/30DayChartChallenge2024/cfg/plots.yml
+++ b/R/30DayChartChallenge2024/cfg/plots.yml
@@ -45,7 +45,7 @@ default:
     day: 9
     theme: major/minor
     category: Distributions
-    source: Determine source
+    source: Wikipedia
   day_10:
     day: 10
     theme: physical
