--- a/R/30DayChartChallenge2024/cfg/plots.yml
+++ b/R/30DayChartChallenge2024/cfg/plots.yml
@@ -60,7 +60,7 @@ default:
     day: 12
     theme: theme day- Reuters Graphics
     category: Distributions
-    source: Reuters
+    source: Economist Intelligence Unit (2023)
   day_13:
     day: 13
     theme: family
