Add day 14 and fix theme

--- a/R/30DayChartChallenge2024/cfg/plots.yml
+++ b/R/30DayChartChallenge2024/cfg/plots.yml
@@ -65,12 +65,12 @@ default:
     day: 13
     theme: family
     category: Relationships
-    source: Asian Development Bank
+    source: Matthews Data
   day_14:
     day: 14
     theme: heatmap
     category: Relationships
-    source: Determine source
+    source: Red de Vigilancia de la Calidad del Aire del Ayto. de Madrid
   day_15:
     day: 15
     theme: historical
