--- a/R/30DayChartChallenge2024/cfg/plots.yml
+++ b/R/30DayChartChallenge2024/cfg/plots.yml
@@ -95,7 +95,7 @@ default:
     day: 19
     theme: dinosaurs
     category: Timeseries
-    source: Determine source
+    source: Google Trends
   day_20:
     day: 20
     theme: correlation
