--- a/R/30DayChartChallenge2024/cfg/plots.yml
+++ b/R/30DayChartChallenge2024/cfg/plots.yml
@@ -110,7 +110,7 @@ default:
     day: 22
     theme: mobility
     category: Timeseries
-    source: Determine source
+    source: Eurostat
   day_23:
     day: 23
     theme: tiles
