--- a/R/30DayChartChallenge2024/cfg/plots.yml
+++ b/R/30DayChartChallenge2024/cfg/plots.yml
@@ -130,7 +130,7 @@ default:
     day: 26
     theme: AI
     category: Uncertainties
-    source: Determine source
+    source: UK ONS
   day_27:
     day: 27
     theme: good/bad
