--- a/R/30DayChartChallenge2024/cfg/plots.yml
+++ b/R/30DayChartChallenge2024/cfg/plots.yml
@@ -140,7 +140,7 @@ default:
     day: 28
     theme: trend
     category: Uncertainties
-    source: Determine source
+    source: Instituto Canario de Estadística
   day_29:
     day: 29
     theme: black & white
