--- a/R/30DayChartChallenge2024/cfg/plots.yml
+++ b/R/30DayChartChallenge2024/cfg/plots.yml
@@ -143,7 +143,7 @@ default:
     source: Instituto Canario de Estadística
   day_29:
     day: 29
-    theme: black & white
+    theme: black_n_white
     category: Uncertainties
     source: Determine source
   day_30:
